archive/go/k3s-online/dynamodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
        - name: dynamodb
          image: amazon/dynamodb-local
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  namespace: chat-app
spec:
  selector:
    app: dynamodb
  ports:
    - port: 8000
      targetPort: 8000
